Added JWT based authentication Added Movie endpoints Added authentication and user validations to other endpoints
