# src/controller/MovieController.ts
@@ -1,15 +1,20 @@
 import StatusCodes from 'http-status-codes';
 import {ErrorHandler} from "../middleware/ErrorMiddleware";
-import {UserCreateDTO, UserDisplayDTO, UserDTO, UserInternalDTO} from "../dto/UserDTO";
 import {plainToClass} from "class-transformer";
 import {validate} from "class-validator";
-import {Body, Delete, Get, Path, Post, Put, Query, Route, Tags} from 'tsoa';
-import {User, UserTypes} from "../entity/User";
-import {createUser, getUserById, updateUser} from "../dao/UserDAO";
+import {Body, Get, Path, Post, Request, Route, Security, Tags} from 'tsoa';
+import {User} from "../entity/User";
 import {printValidationError} from "../shared/functions";
-import {ActorDTO, MovieCreateDTO, MovieDTO, MovieFilterDTO} from "../dto/MovieDTO";
-import {ListFilterDTO} from "../dto/ListDTO";
-import {createMovie, filterMovies} from "../dao/MovieDAO";
+import {
+    ActorDTO, BaseMovieDTO,
+    MovieCreateDTO, MovieDetailDTO,
+    MovieDTO,
+    MovieFilterDTO,
+    RateCreateDTO,
+} from "../dto/MovieDTO";
+import {createMovie, filterMovies, getMovieById} from "../dao/MovieDAO";
+import {createRating, getRateAvgByMovieId} from "../dao/RatingDAO";
+import {Movie} from "../entity/Movie";
 
 const { BAD_REQUEST, NOT_FOUND, INTERNAL_SERVER_ERROR, NO_CONTENT } = StatusCodes;
 
@@ -21,25 +26,28 @@ export default class MovieController {
      * @param id {int} User id
      */
     @Get('/:id')
-    public async getMovieDetails(@Path() id: number): Promise<UserDTO> {
+    public async getMovieDetails(@Path() id: number): Promise<MovieDetailDTO> {
         if (isNaN(id)) {
             throw new ErrorHandler(BAD_REQUEST, 'Movie id must be an int')
         }
 
-        const user: User | undefined = await getUserById(id, UserTypes.User)
-        if (user == null) {
+        const movie: Movie | undefined = await getMovieById(id)
+        if (!movie) {
             throw new ErrorHandler(NOT_FOUND, 'Movie not found.')
         }
 
-        return getUserDTO(user)
+        let rating = await getRateAvgByMovieId(id)
+        rating = parseFloat(rating).toFixed(2)
+
+        return getMovieDTO(movie, rating) as MovieDetailDTO
     }
 
     /**
      * List users according to filter
      * @param filters
      */
-    @Get('/')
-    public async listMovies(@Query() filters: MovieFilterDTO): Promise<any> {
+    // @Get('/')
+    public async listMovies(filters: MovieFilterDTO): Promise<any> {
         const filter: MovieFilterDTO = plainToClass(MovieFilterDTO, filters)
         try {
             const validation = await validate(filter)
@@ -56,10 +64,11 @@ export default class MovieController {
     /**
      * Register a movie in the system.
      * Only allowed by admins.
-     * @param body {UserCreateDTO} Formatted user data to be created
+     * @param body {MovieCreateDTO} Formatted user data to be created
      */
+    @Security('jwt', ['Admin'])
     @Post('/')
-    public async registerMovie(@Body() body: UserCreateDTO): Promise<MovieDTO> {
+    public async registerMovie(@Body() body: MovieCreateDTO): Promise<MovieDTO> {
         const movie: MovieCreateDTO = plainToClass(MovieCreateDTO, body)
 
         try {
@@ -80,38 +89,12 @@ export default class MovieController {
         return await createMovie(movieCreateData)
     }
 
-    /**
-     * Excludes user from system
-     * @param id {int} user id to exclude
-     */
-    @Delete('/:id')
-    public async deleteUser(@Path() id: number): Promise<boolean> {
-        const user = await getUserById(id)
-        if (!user) {
-            throw new ErrorHandler(NOT_FOUND, 'User not found.')
-        }
-
-        user.active = false
-        await updateUser(id, user)
-        return true
-    }
-
-    /**
-     * Updates information for an user
-     * @param id {int} user id to update
-     * @param body {UserDTO} user data to be updated
-     */
-    @Put('/:id')
-    public async updateUser(@Path() id: number, @Body() body: UserDTO): Promise<UserDTO> {
-        const user = await getUserById(id)
-        if (!user) {
-            throw new ErrorHandler(NOT_FOUND, 'User not found.')
-        }
-
-        const userPayload: UserDTO = plainToClass(UserDTO, body)
-
+    @Security('jwt', ['User'])
+    @Post('/:id/rate')
+    public async registerRate(@Path() movieId: number, @Body() payload: RateCreateDTO, @Request() user: User): Promise<RateCreateDTO> {
+        const rating: RateCreateDTO = plainToClass(RateCreateDTO, payload)
         try {
-            const validation = await validate(user)
+            const validation = await validate(rating)
             if (validation.length > 0) {
                 throw new ErrorHandler(BAD_REQUEST, printValidationError(validation))
             }
@@ -119,40 +102,34 @@ export default class MovieController {
             throw new ErrorHandler(BAD_REQUEST, err)
         }
 
-        const updatedUser = await updateUser(id, userPayload)
-        return getUserDTO(updatedUser)
-
-    }
-
-}
-
-export async function createTypedUser(dto: UserDTO, type: UserTypes): Promise<User | undefined> {
-    /**
-     * Internal function used to create users with a type.
-     * Type 0 = Admin
-     * Type 1 = User
-     */
-    const typedUser: UserInternalDTO = plainToClass(UserInternalDTO, dto)
-    typedUser['type'] = type
-
-    try {
-        return await createUser(typedUser)
-    } catch (err) {
-        const msg: string = (err as Error).toString()
-        if (msg.includes('unique constraint')) {
-            throw new ErrorHandler(BAD_REQUEST, 'User already exists.')
+        const movie: MovieDTO = await getMovieById(movieId)
+        if (!movie) {
+            throw new ErrorHandler(NOT_FOUND, 'Movie not found.')
         }
 
-        throw new ErrorHandler(INTERNAL_SERVER_ERROR, 'Could not create user.')
+        const ratingEntity: RateCreateDTO = {
+            ...rating,
+            movieId,
+            userId: user.id
+        }
+        await createRating(ratingEntity)
+        return rating
     }
 }
 
-export function getUserDTO(user: User): UserDisplayDTO {
-    return {
-        id: user.id,
-        age: user.age,
-        email: user.email,
-        firstName: user.firstName,
-        lastName: user.lastName,
+/**
+ * Returns display movie DTO
+ * @param movie
+ * @param rating
+ */
+function getMovieDTO(movie: Movie, rating?: string): BaseMovieDTO {
+    const actors = movie.actors ? movie.actors.map((act) => act.name) : []
+    const dto = {
+        ...movie,
+        actors,
     }
+    if (rating) {
+        dto['rating'] = rating
+    }
+    return dto
 }
