# src/routes/UserRoutes.ts
@@ -1,12 +1,15 @@
 import express from "express";
 import UserController from "../controller/UserController";
 import StatusCodes from 'http-status-codes';
+import {authenticateMiddleware} from "../middleware/AuthenticationMiddleware";
 
 const { CREATED, OK} = StatusCodes;
 
 const router = express.Router();
 
-router.get("/:id", async (req, res) => {
+router.get("/:id",
+    authenticateMiddleware('jwt', ['User']),
+    async (req, res) => {
     const controller = new  UserController();
     const user = await controller.getUser(parseInt(req.params.id));
     return res.status(OK).json(user)
@@ -18,15 +21,19 @@ router.post("/register", async (req, res) => {
     return res.status(CREATED).json(user)
 });
 
-router.put("/:id", async (req, res) => {
+router.put("/:id",
+    authenticateMiddleware('jwt', ['User']),
+    async (req, res) => {
     const controller = new UserController();
-    const user = await controller.updateUser(parseInt(req.params.id), req.body);
+    const user = await controller.updateUser(parseInt(req.params.id), req.body, req['user']);
     return res.status(OK).json(user)
 });
 
-router.delete("/:id", async (req, res) => {
+router.delete("/:id",
+    authenticateMiddleware('jwt', ['User']),
+    async (req, res) => {
     const controller = new UserController();
-    await controller.deleteUser(parseInt(req.params.id));
+    await controller.deleteUser(parseInt(req.params.id), req['user']);
     return res.status(OK)
 });
 
